# UnrealAgent

./: .gitignore  README.md
Docs/: README.md  design-build-and-launch.md  development-log.md  expansion-plan.md  knowledge-base-design.md  test-plan.md
MCPServer/: pyproject.toml
MCPServer/knowledge/api_reference/: material_enums_and_properties.json  material_expressions.json
MCPServer/knowledge/best_practices/: core_practices.json
MCPServer/knowledge/lessons_learned/: _ai_generated.json  core_experiences.json
MCPServer/knowledge/tool_schemas/: tool_usage_guide.json
MCPServer/knowledge/ue_api_gotchas/: ue57_breaking_changes.json
MCPServer/src/unreal_agent_mcp/: __main__.py  ast_fingerprint.py  connection.py  knowledge_store.py  telemetry.py
MCPServer/src/unreal_agent_mcp/tools/: actors.py  asset_manage.py  assets.py  blueprints.py  build.py  context.py  editor.py  events.py  knowledge.py  materials.py  project.py  properties.py  python.py  screenshots.py  viewport.py  world.py
Source/UnrealAgent/: UnrealAgent.Build.cs
Source/UnrealAgent/Private/: UAEventCache.cpp  UALogCapture.cpp  UnrealAgent.cpp
Source/UnrealAgent/Private/Commands/: UAAssetManageCommands.cpp  UABlueprintCommands.cpp  UABlueprintCommands_Operations.cpp  UACommandRegistry.cpp  UAContextCommands.cpp  UAEditorCommands.cpp  UAEventCommands.cpp  UAMaterialCommands.cpp  UAPropertyCommands.cpp  UAPythonCommands.cpp  (+1 more)
Source/UnrealAgent/Public/: UAEventCache.h  UALogCapture.h
Tests/: analyze_screenshots.py  perf_benchmark.py  step0_report.html  step0_results.json  step0_screenshot_test.py
(+9 files in other folders)
